--- a/Full stack/monProjet/templates/form/new.html.twig
+++ b/Full stack/monProjet/templates/form/new.html.twig
@@ -4,10 +4,10 @@
 
 {% block body %}
     <div class="container">
-        <h1 class="text-center">Create new Disc</h1>
+        <h1 class="text-center">Créer un nouveau disque</h1>
 
             {{ include('form/_form.html.twig') }}
 
-        <a class="btn btn-primary ml-4" href="{{ path('app_form_index') }}">back to list</a>
+        <a class="btn btn-primary ml-4" href="{{ path('app_form_index') }}">Retour a la liste</a>
     </div> <!--fin div class container -->
 {% endblock %}
