--- a/Full stack/monProjet/public/CSS/style.css
+++ b/Full stack/monProjet/public/CSS/style.css
@@ -1,6 +1,9 @@
 body {
     background-color: #222222;
 }
-h1, p {
-    color: #C9C9C9;
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
 }
