--- a/Full stack/monProjet/templates/base.html.twig
+++ b/Full stack/monProjet/templates/base.html.twig
@@ -5,7 +5,8 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
 
         {# feuille de style css #}
-        <link rel="stylesheet" href="{{ asset('CSS/style.css') }}">
+        {# <link rel="stylesheet" href="{{ asset('/CSS/style.css') }}"> #}
+<link rel="stylesheet" href="/CSS/style.css">
         {# affichage des images show, + ... #}
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css" 
             integrity="sha384-/frq1SRXYH/bSyou/HUp/hib7RVN1TawQYja658FEOodR/FQBKVqT9Ol+Oz3Olq5" 
@@ -24,9 +25,18 @@
         {% endblock %}
     </head>
     <body>
-    <!-- Background image -->
-        <img class="background mt-2" src="jaquettes/bg.png" title="logo" alt="logo" width="50%" height="auto">
-    <!-- Background image -->
+        <header class="container-fluid">
+            <div class="row justify-content-around align-items-center">
+                    <h1 class="font-weight-bold text-dark">VELVET</h1>
+            <!-- logo image -->
+                <img class="col-3 d-none d-sm-block" src="../images/logo.png" title="logo" alt="logo">
+            <!-- logo image -->
+            
+                    <h1 class="font-weight-bold text-dark">RECORD</h1>
+            </div>
+        </header>
+    <br>
+    <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="{{ path('app_accueil') }}">Accueil</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,14 +46,24 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-                    <li class="nav-item">
+                    {# <li class="nav-item">
                         <a class="nav-link" href="{{ path('app_profil') }}">Profil</a>
-                    </li>
+                    </li> #}
                         
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('app_form_index') }}">Discs</a>
+                        <a class="nav-link" href="{{ path('app_form_index') }}">Disques</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_artist_index') }}">Artistes</a>
                     </li>
             </ul>
+                <!-- barre de recherche -->
+                        <form class="form-inline my-2 my-lg-0 mr-2">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Recherche ..." aria-label="Search">
+                        <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Rechercher</button>
+                        </form>
+       
+
                         {% if is_granted("ROLE_ADMIN") %}
                                 <div class="dropdown">
                                     <a class="btn btn-success dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -57,13 +77,19 @@
                                         </div>
                                 </div>
                         {% endif %}
-                
-                
+
+                <!-- icone panier -->
                     <li class="nav-link">
-                        <a href="{{ path("app_profil")}}"><i class="fa-solid fa-user"></i></a>
-                    </li>         
+                        <a href="#"><i class="fa-solid fa-cart-shopping" title="Panier"></i></a>
+                    </li>
+                <!-- fin icone panier -->
+                <!-- icone profil -->
+                    <li class="nav-link ">
+                        <a href="{{ path("app_profil")}}" title="Profil"><i class="fa-solid fa-user"></i> Bonjour, <br> {{ app.user.prenom }} {{ app.user.nom }}</a>
+                    </li>        
+                <!-- fin icone profil --> 
                     <li class="nav-link">
-                        <a href="{{path('app_logout')}}">Se déconnecter</a>
+                        <a href="{{ path('app_logout')}}">Se déconnecter</a>
                     </li>
                 {# {% else %}
                         <li>
@@ -73,22 +99,61 @@
                             <a class="nav-link" href="{{ path("app_register") }}">S'enregistrer</a>
                         </li> #}
                 {% endif %}
-                
-            
         </div>
-
     </nav>
+    <br>
 
 <!-- affichage du message d'enregistrement d'un nouveau disque -->
- {% for message in app.flashes('success') %}
-     <div class="alert alert-success">
-         {{ message }}
-     </div>
- {% endfor %}
+    {% for message in app.flashes('success') %}
+        <div class="alert alert-success">
+            {{ message }}
+        </div>
+    {% endfor %}
  
-        {% block body %}
-        {% endblock %}
-        
+{% block body %}
+{% endblock %}
+
+    <br>
+    <footer class="navbar navbar-expand-lg navbar-light bg-light">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#footer" aria-controls="footer" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="footer">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path("app_mention") }}">Mention légale</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path("app_horaires") }}">Horaires</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path("app_plan") }}">Plan du site</a>
+                </li>
+            </ul>
+                <div class="col-2 text-center">
+                    <font color = "grey">Velvet Record
+                        <br>
+                        <a>64 rue de Daours</a>
+                        <br>
+                        <a>80000 Amiens</a>
+                        <br>
+                    </font>
+                </div>
+                <div class="text-center">
+                    <font color = "grey">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone" viewBox="0 0 16 16">
+                           <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+                        </svg>
+                            <a>03.22.62.28.03</a>
+                            <br>
+                               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
+                                   <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
+                                </svg>
+                                    <a>contact@velvetrecord.com</a>
+                    </font>
+                </div>            
+        </div>
+    </footer>
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
