--- a/Full stack/monProjet/templates/form/edit.html.twig
+++ b/Full stack/monProjet/templates/form/edit.html.twig
@@ -4,14 +4,15 @@
 
 {% block body %}
     <div class="container">
-    <h1 class="text-center">Edit Disc</h1>
+       <h1 class="text-center">Edition un disque</h1>
+            <br>
+       {{ include('form/_form.html.twig', {'button_label': 'Sauvegarder'}) }}
 
-    {{ include('form/_form.html.twig', {'button_label': 'Update'}) }}
 
+{# <img src="{{app.request.basepath}}/images/produit/{{disc.picture}}" alt="" class="card-img-top"> #}
 
+        <a class="btn btn-primary ml-4" href="{{ path('app_form_index') }}">Retour a la liste</a>
 
-    <a class="btn btn-primary ml-4" href="{{ path('app_form_index') }}">Retour a la liste</a>
-
-    {{ include('form/_delete_form.html.twig') }}
+        {{ include('form/_delete_form.html.twig') }}
     </div>
 {% endblock %}
