--- a/Full stack/monProjet/templates/form/show.html.twig
+++ b/Full stack/monProjet/templates/form/show.html.twig
@@ -4,33 +4,47 @@
 
 {% block body %}
 <div class="container">
-    <h1 class="text-center">Disc</h1>
+    <h1 class="text-center">Disque {{disc.title }}</h1>
 
     <table class="table">
         <tbody>
+            {% if is_granted("ROLE_ADMIN") %}
             <tr>
                 <th>Id</th>
                 <td>{{ disc.id }}</td>
             </tr>
+            {% endif %}
             <tr>
-                <th>Title</th>
+                <th>Titre</th>
                 <td>{{ disc.title }}</td>
-            </tr>
-            <tr>
-                <th>Picture</th>
-                <td>{{ disc.picture }}</td>
             </tr>
             <tr>
                 <th>Label</th>
                 <td>{{ disc.label }}</td>
             </tr>
+            <tr>
+                <th>Genre</th>
+                <td>{{ disc.genre }}</td>
+            </tr>
+            <tr>
+                <th>Prix</th>
+                <td>{{ disc.price }}</td>
+            </tr>
+            <tr>
+                <th>Image</th>
+                <td>
+                    <img src="{{app.request.basepath}}/images/produit/{{disc.picture}}" alt="" width="50%" height="auto">
+                </td>
+            </tr>
+
         </tbody>
     </table>
 
     <a class="btn btn-primary ml-4" href="{{ path('app_form_index') }}">Retour a la liste</a>
-
+{% if is_granted("ROLE_ADMIN") %}
     <a class="btn btn-secondary" href="{{ path('app_form_edit', {'id': disc.id}) }}">Editer</a>
 
     {{ include('form/_delete_form.html.twig') }}
-    </div>
+{% endif %}
+</div> <!-- fin div class container -->
 {% endblock %}
