--- a/Full stack/monProjet/templates/reset_password/reset.html.twig
+++ b/Full stack/monProjet/templates/reset_password/reset.html.twig
@@ -3,10 +3,15 @@
 {% block title %}Reset your password{% endblock %}
 
 {% block body %}
-    <h1>Reset your password</h1>
+<div class="container">
+    <h1 class="text-center">Réinitialiser votre mot de passe</h1>
 
-    {{ form_start(resetForm) }}
-        {{ form_row(resetForm.plainPassword) }}
-        <button class="btn btn-primary">Reset password</button>
-    {{ form_end(resetForm) }}
+        <div class="col-sm-10 col-sm offset-1">
+            {{ form_start(resetForm) }}
+            {{ form_row(resetForm.plainPassword) }}
+                <button class="btn btn-primary">Reset password</button>
+            {{ form_end(resetForm) }}
+        </div>
+</div>
+
 {% endblock %}
