--- a/Full stack/monProjet/templates/user/edit.html.twig
+++ b/Full stack/monProjet/templates/user/edit.html.twig
@@ -5,11 +5,16 @@
 {% block body %}
     <div class="container">
         <h1 class="text-center">Edition d'un utilisateur</h1>
+            <br>
+            <br>
+        {{ include('user/_form.html.twig', {'button_label': 'Sauvegarder'}) }}
 
-        {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
-
-        <a class="btn btn-primary ml-4" href="{{ path('app_user_index') }}">Retour a la liste</a>
-
+        {% if is_granted("ROLE_ADMIN") %}        
+            <a class="btn btn-primary ml-4" href="{{ path('app_user_index') }}">Retour a la liste</a>
+            {% else %}
+            <a class="btn btn-primary ml-4" href="{{path('app_profil') }}">Retour au profil</a>
+        {% endif %}
         {{ include('user/_delete_form.html.twig') }}
+        
     </div>
 {% endblock %}
