--- a/Full stack/monProjet/templates/user/show.html.twig
+++ b/Full stack/monProjet/templates/user/show.html.twig
@@ -5,36 +5,65 @@
 {% block body %}
     <div class="container">
         <h1 class="text-center">Visualisation d'un utilisateur</h1>
+        <br>
 
         <table class="table">
             <tbody>
+                {% if is_granted("ROLE_ADMIN") %}   
                 <tr>
                     <th>Id</th>
                     <td>{{ user.id }}</td>
+                </tr>
+                {% endif %}
+                <tr>
+                    <th>Nom</th>
+                    <td>{{ user.nom }}</td>
+                </tr>
+                <tr>
+                    <th>Prénom</th>
+                    <td>{{ user.prenom }}</td>
+                </tr>
+                <tr>
+                    <th>Date de naissance</th>
+                    <td>{{ user.dob }}</td>
+                </tr>
+                <tr>
+                    <th>Adresse</th>
+                    <td>{{ user.adress }}</td>
+                </tr>
+                <tr>
+                    <th>Code postal</th>
+                    <td>{{ user.codePostal }}</td>
+                </tr>
+                <tr>
+                    <th>Ville</th>
+                    <td>{{ user.ville }}</td>
                 </tr>
                 <tr>
                     <th>Email</th>
                     <td>{{ user.email }}</td>
                 </tr>
+                {% if is_granted("ROLE_ADMIN") %}   
                 <tr>
-                    <th>Roles</th>
+                    <th>Rôle</th>
                     <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
                 </tr>
-                <tr>
+                {# <tr>
                     <th>Password</th>
                     <td>{{ user.password }}</td>
-                </tr>
+                </tr> #}
                 <tr>
-                    <th>IsVerified</th>
+                    <th>Email vérifié</th>
                     <td>{{ user.isVerified ? 'Yes' : 'No' }}</td>
                 </tr>
+                {% endif %}
             </tbody>
         </table>
 
         <a class="btn btn-primary ml-4" href="{{ path('app_user_index') }}">Retour a la liste</a>
 
         <a class="btn btn-secondary" href="{{ path('app_user_edit', {'id': user.id}) }}">Editer</a>
-        
+       
         {{ include('user/_delete_form.html.twig') }}
     </div>
 {% endblock %}
