--- a/Full stack/monProjet/templates/form/_form.html.twig
+++ b/Full stack/monProjet/templates/form/_form.html.twig
@@ -22,6 +22,9 @@
         <div class="col-4">
             {{ form_row(form.price) }}
         </div>
+        <div class="col-4">
+            {{ form_row(form.promo) }}
+        </div>
     </div> <!-- fin div row -->
     {{ form_widget(form) }}
     <button class="btn btn-secondary float-right mr-4">{{ button_label|default('Enregistrer') }}</button>
