--- a/Full stack/monProjet/templates/form/index.html.twig
+++ b/Full stack/monProjet/templates/form/index.html.twig
@@ -69,11 +69,18 @@
                                 <div class="card-title">{{ disc.artist.name }}</div>
                                     <p class="text text-muted">Label: {{ disc.label }}</p>
                                     <p class="text text-muted">Genre: {{ disc.genre }}</p>
-                                    <p class="text text-primary">Prix: {{ disc.price }}€</p>
+                                    <p class="text text-primary">Prix: {{ disc.price }} &nbsp€</p>
                                     <a class="ml-2" href="{{ path('app_form_show', {'id': disc.id}) }}"><i class="fa-solid fa-eye" title="Visualiser le disque"></i></a>
                                         {% if is_granted("ROLE_ADMIN") %}
                                             <a class="ml-2" href="{{ path('app_form_edit', {'id': disc.id}) }}"><i class="fa-solid fa-pen-to-square" title="Editer"></i></a>
-                                        {% endif %}    
+                                    <!-- bouton mise en avant -->
+                                            <a class="float-right ml-2" href="#"><i class="bi bi-arrow-up-left-circle-fill" title="Mettre en avant"></i></a>
+                                            {# <a class="float-right ml-2" href="#"><i class="bi bi-arrow-down-right-circle-fill" title="Retirer la mise en avant"></i></a> #}
+                                        {% endif %}
+                                    <!-- bouton ajouter au panier -->
+                                    <a class="float-right" href="{{ path("cart_add", {id: disc.id}) }}" title="Ajouter au panier">
+                                        <i class="bi bi-cart-plus"></i>
+                                    </a>    
                                 </div>
                 </div>
 
